--- a/kie-wb-common-kogito/kie-wb-common-kogito-webapp-base/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-kogito/kie-wb-common-kogito-webapp-base/src/main/resources/META-INF/ErraiApp.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2017 Red Hat, Inc. and/or its affiliates.
+# Copyright 2019 Red Hat, Inc. and/or its affiliates.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -28,5 +28,5 @@
 # file, although it is rarely necessary. See the documentation at
 # https://docs.jboss.org/author/display/ERRAI/ErraiApp.properties
 # for details.
-errai.ioc.enabled.alternatives=org.kie.workbench.common.kogito.webapp.base.client.workarounds.MockIsKogito
+errai.ioc.enabled.alternatives=org.kie.workbench.common.kogito.webapp.base.client.workarounds.IsKogito
 
