[DROOLS-3727] Disabling SONAR on kie-wb-common-dmn-webapp-standalone

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-standalone/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-standalone/pom.xml
@@ -33,6 +33,8 @@
     <errai.jboss.home>${project.build.directory}/wildfly-${version.org.jboss.errai.wildfly}</errai.jboss.home>
     <gwt.compiler.localWorkers>4</gwt.compiler.localWorkers>
     <version.thorntail>2.4.0.Final</version.thorntail>
+    <code.coverage.disabled>true</code.coverage.disabled>
+    <sonar.skip>true</sonar.skip>
   </properties>
 
   <dependencies>
@@ -54,8 +56,8 @@
       <artifactId>logback-classic</artifactId>
       <exclusions>
         <exclusion>
-        <groupId>com.google.inject</groupId>
-        <artifactId>guice</artifactId>
+          <groupId>com.google.inject</groupId>
+          <artifactId>guice</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -976,6 +978,22 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <configuration>
+          <skip>${code.coverage.disabled}</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <systemPropertyVariables>
+            <jacoco-agent.destfile>${jacoco.exec.file}</jacoco-agent.destfile>
+          </systemPropertyVariables>
+          <skip>${code.coverage.disabled}</skip>
+        </configuration>
       </plugin>
     </plugins>
 
