Reorganize uberfire-widgets-core-editors dependency

--- a/kie-wb-common-kogito/kie-wb-common-kogito-client/pom.xml
+++ b/kie-wb-common-kogito/kie-wb-common-kogito-client/pom.xml
@@ -66,6 +66,10 @@
     </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-widgets-core-editors</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.uberfire</groupId>
       <artifactId>uberfire-workbench-client-views-patternfly</artifactId>
       <scope>provided</scope>
     </dependency>
