--- a/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-spaces-screen/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-spaces-screen/pom.xml
@@ -18,7 +18,6 @@
     <node.version>v11.6.0</node.version>
     <yarn.version>v1.12.3</yarn.version>
     <npm.version>6.9.0</npm.version>
-    <frontend-maven-plugin.version>1.7.5</frontend-maven-plugin.version>
   </properties>
 
   <dependencies>
@@ -59,7 +58,7 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
-        <version>${frontend-maven-plugin.version}</version>
+        <version>${version.frontend-maven-plugin}</version>
         <configuration>
           <installDirectory>${project.build.directory}</installDirectory>
         </configuration>
@@ -173,7 +172,7 @@
           <plugin>
             <groupId>com.github.eirslett</groupId>
             <artifactId>frontend-maven-plugin</artifactId>
-            <version>${frontend-maven-plugin.version}</version>
+            <version>${version.frontend-maven-plugin}</version>
             <configuration>
               <installDirectory>${project.build.directory}</installDirectory>
             </configuration>
@@ -203,7 +202,7 @@
           <plugin>
             <groupId>com.github.eirslett</groupId>
             <artifactId>frontend-maven-plugin</artifactId>
-            <version>${frontend-maven-plugin.version}</version>
+            <version>${version.frontend-maven-plugin}</version>
             <configuration>
               <installDirectory>${project.build.directory}</installDirectory>
             </configuration>
