--- a/kie-wb-common-kogito/kie-wb-common-kogito-webapp-base/pom.xml
+++ b/kie-wb-common-kogito/kie-wb-common-kogito-webapp-base/pom.xml
@@ -106,6 +106,24 @@
       <artifactId>kie-wb-common-kogito-client</artifactId>
     </dependency>
 
+    <!-- Test scope dependencies -->
+    <dependency>
+      <groupId>com.google.gwt.gwtmockito</groupId>
+      <artifactId>gwtmockito</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-testing-utils</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>lienzo-tests</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
