--- a/kie-wb-common-kogito/kie-wb-common-kogito-webapp-base/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-kogito/kie-wb-common-kogito-webapp-base/src/main/resources/META-INF/ErraiApp.properties
@@ -28,5 +28,5 @@
 # file, although it is rarely necessary. See the documentation at
 # https://docs.jboss.org/author/display/ERRAI/ErraiApp.properties
 # for details.
-errai.ioc.enabled.alternatives=org.kie.workbench.common.kogito.webapp.base.client.workarounds.IsKogito
+errai.ioc.enabled.alternatives=org.kie.workbench.common.dmn.webapp.kogito.common.client.workarounds.IsKogito
 
