--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-common/src/it/kie-wb-common-dmn-webapp-kogito-marshaller-tests/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-common/src/it/kie-wb-common-dmn-webapp-kogito-marshaller-tests/pom.xml
@@ -76,6 +76,10 @@
       <groupId>org.kie.workbench</groupId>
       <artifactId>kie-wb-common-dmn-webapp-kogito-marshaller</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-wires-core-grids</artifactId>
+    </dependency>
 
     <!-- GWT Sources - required for GWTTestCase -->
     <dependency>
