Updates following peer review.

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/pom.xml
@@ -510,6 +510,8 @@
               <deploy>${project.build.directory}/gwt-symbols-deploy</deploy>
               <module>org.kie.workbench.common.dmn.showcase.DMNKogitoRuntimeWebapp</module>
               <extraJvmArgs>-Xmx4096m -Xms1024m -Xss1M -XX:CompileThreshold=7000 -Derrai.dynamic_validation.enabled=true -Derrai.jboss.home=${errai.jboss.home}</extraJvmArgs>
+              <optimizationLevel>9</optimizationLevel>
+              <style>OBFUSCATED</style>
 
               <noServer>false</noServer>
               <server>org.jboss.errai.cdi.server.gwt.EmbeddedWildFlyLauncher</server>
