Fix enforcer issues

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller-tests/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller-tests/pom.xml
@@ -61,6 +61,12 @@
     <dependency>
       <groupId>org.kie.workbench.stunner</groupId>
       <artifactId>kie-wb-common-stunner-kogito-client</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.jboss.spec.javax.el</groupId>
+          <artifactId>jboss-el-api_3.0_spec</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- DMN Editor -->
