--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller-tests/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller-tests/pom.xml
@@ -83,6 +83,10 @@
       <artifactId>kie-wb-common-dmn-webapp-kogito-marshaller</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.kie.workbench</groupId>
+      <artifactId>kie-wb-common-kogito-webapp-base</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-wires-core-grids</artifactId>
     </dependency>
