--- a/kie-wb-common-kogito/kie-wb-common-kogito-webapp-base/pom.xml
+++ b/kie-wb-common-kogito/kie-wb-common-kogito-webapp-base/pom.xml
@@ -103,6 +103,11 @@
 
     <dependency>
       <groupId>org.kie.workbench</groupId>
+      <artifactId>kie-wb-common-kogito-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.kie.workbench</groupId>
       <artifactId>kie-wb-common-kogito-client</artifactId>
     </dependency>
 
