KOGITO-879: Define State Control API KOGITO-880: Create JSInterop layer for StateControl API KOGITO-881: Integrate State Control API in Stunner to handle Undo & Redo

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/pom.xml
@@ -389,8 +389,13 @@
     </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
+      <artifactId>appformer-js-bridge</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.uberfire</groupId>
       <artifactId>appformer-kogito-bridge</artifactId>
-      <classifier>sources</classifier>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -659,7 +664,7 @@
                 <compileSourcesArtifact>org.uberfire:uberfire-wires-core-grids</compileSourcesArtifact>
 
                 <compileSourcesArtifact>org.uberfire:appformer-js-bridge</compileSourcesArtifact>
-
+                <compileSourcesArtifact>org.uberfire:appformer-kogito-bridge</compileSourcesArtifact>
               </compileSourcesArtifacts>
             </configuration>
             <executions>
