--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/pom.xml
@@ -399,7 +399,7 @@
     </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
-      <artifactId>appformer-kogito-api</artifactId>
+      <artifactId>appformer-client-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -674,8 +674,9 @@
                 <compileSourcesArtifact>org.kie.workbench:kie-wb-common-dmn-webapp-kogito-marshaller</compileSourcesArtifact>
                 <compileSourcesArtifact>org.uberfire:uberfire-wires-core-grids</compileSourcesArtifact>
 
+                <!-- Appformer -->
                 <compileSourcesArtifact>org.uberfire:appformer-js-bridge</compileSourcesArtifact>
-                <compileSourcesArtifact>org.uberfire:appformer-kogito-api</compileSourcesArtifact>
+                <compileSourcesArtifact>org.uberfire:appformer-client-api</compileSourcesArtifact>
                 <compileSourcesArtifact>org.uberfire:appformer-kogito-bridge</compileSourcesArtifact>
               </compileSourcesArtifacts>
             </configuration>
