--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-commons/kie-wb-common-stunner-client-common/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-commons/kie-wb-common-stunner-client-common/pom.xml
@@ -147,10 +147,10 @@
       <artifactId>elemental2-dom</artifactId>
     </dependency>
 
-    <!-- Appformer Kogito -->
+    <!-- Appformer -->
     <dependency>
       <groupId>org.uberfire</groupId>
-      <artifactId>appformer-kogito-api</artifactId>
+      <artifactId>appformer-client-api</artifactId>
     </dependency>
 
     <!-- Test scope. -->
