--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/pom.xml
@@ -580,6 +580,7 @@
               <hostedWebapp>src/main/webapp</hostedWebapp>
               <gwtSdkFirstInClasspath>false</gwtSdkFirstInClasspath>
               <logLevel>INFO</logLevel>
+              <generateJsInteropExports>true</generateJsInteropExports>
 
               <compileSourcesArtifacts>
 
