--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/src/main/resources/META-INF/ErraiApp.properties
@@ -33,7 +33,8 @@ errai.ioc.enabled.alternatives=org.uberfire.client.plugin.RuntimePluginsServiceP
                                org.uberfire.client.workbench.VFSServiceProxyClientImpl \
                                org.uberfire.client.workbench.VFSLockServiceProxyClientImpl \
                                org.uberfire.preferences.client.store.PreferenceBeanStoreClientImpl \
-                               org.kie.workbench.common.stunner.kogito.client.services.KogitoBPMNCanvasShortcutsControlImpl
+                               org.kie.workbench.common.stunner.kogito.client.services.KogitoBPMNCanvasShortcutsControlImpl \
+                               org.kie.workbench.common.stunner.kogito.runtime.client.session.command.impl.KogitoKeyEventHandlerImpl
 
 errai.ioc.blacklist=org.uberfire.preferences.client.store.PreferenceBeanStoreImpl \
                     org.uberfire.client.RuntimePluginsServiceProxyBackendImpl \
