--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-common/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-common/src/main/resources/META-INF/ErraiApp.properties
@@ -32,4 +32,5 @@ errai.ioc.enabled.alternatives=org.kie.workbench.common.dmn.webapp.kogito.common
                                org.uberfire.preferences.client.store.PreferenceBeanStoreClientImpl \
                                org.kie.workbench.common.dmn.webapp.kogito.common.client.editors.documentation.DMNDocumentationViewButtonsVisibilitySupplier \
                                org.kie.workbench.common.dmn.webapp.kogito.common.client.editors.documentation.common.DMNDocumentationFactory \
-                               org.kie.workbench.common.dmn.webapp.kogito.common.client.session.KogitoDMNCanvasShortcutsControlImpl
+                               org.kie.workbench.common.dmn.webapp.kogito.common.client.session.KogitoDMNCanvasShortcutsControlImpl \
+                               org.kie.workbench.common.stunner.kogito.runtime.client.session.command.impl.KogitoKeyEventHandlerImpl
