--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-client-api/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-client-api/pom.xml
@@ -95,7 +95,7 @@
 
     <dependency>
       <groupId>org.uberfire</groupId>
-      <artifactId>appformer-kogito-bridge</artifactId>
+      <artifactId>appformer-client-api</artifactId>
     </dependency>
 
     <!-- Test scope. -->
