--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/pom.xml
@@ -30,6 +30,14 @@
   <name>Kie Workbench - Common - Stunner - BPMN Definition Set - Kogito Runtime</name>
   <description>Kie Workbench - Common - Stunner - BPMN Definition Set - Kogito Runtime</description>
 
+  <properties>
+    <skipITs>false</skipITs>
+    <org.kie.bpmn.kogito.browser.headless>true</org.kie.bpmn.kogito.browser.headless>
+    <!-- We do not want to run selenium tests in default profile -->
+    <kogito.it.tests.excludes>**/*IT.java</kogito.it.tests.excludes>
+  </properties>
+
+
   <dependencies>
     <!--Logs-->
     <dependency>
@@ -651,6 +659,33 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.xmlunit</groupId>
+      <artifactId>xmlunit-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.xmlunit</groupId>
+      <artifactId>xmlunit-assertj</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
@@ -860,6 +895,20 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>${kogito.it.tests.excludes}</exclude>
+          </excludes>
+          <systemPropertyVariables>
+            <org.kie.bpmn.kogito.browser.headless>${org.kie.bpmn.kogito.browser.headless}</org.kie.bpmn.kogito.browser.headless>
+            <org.kie.bpmn.kogito.screenshots.dir>${project.build.directory}/screenshots</org.kie.bpmn.kogito.screenshots.dir>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+
     </plugins>
 
   </build>
@@ -918,6 +967,19 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>kogito-it-tests</id>
+      <activation>
+        <property>
+          <name>integration-tests</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <properties>
+        <!-- We want to run selenium tests in kogito-tests profile -->
+        <kogito.it.tests.excludes></kogito.it.tests.excludes>
+      </properties>
     </profile>
   </profiles>
 </project>
