--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-standalone/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-standalone/pom.xml
@@ -779,6 +779,21 @@
       <artifactId>kie-wb-common-profile-api</artifactId>
     </dependency>
 
+<!--    <dependency>-->
+<!--      <groupId>org.kie</groupId>-->
+<!--      <artifactId>kie-dmn-validation</artifactId>-->
+<!--      <exclusions>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.drools</groupId>-->
+<!--          <artifactId>drools-verifier-api</artifactId>-->
+<!--        </exclusion>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.drools</groupId>-->
+<!--          <artifactId>drools-verifier-core</artifactId>-->
+<!--        </exclusion>-->
+<!--      </exclusions>-->
+<!--    </dependency>-->
+
     <!-- Necessary to inject MVELEvaluator dependency -->
     <dependency>
       <groupId>org.drools</groupId>
@@ -914,6 +929,8 @@
                 <compileSourcesArtifact>org.kie.workbench.services:kie-wb-common-datamodel-api</compileSourcesArtifact>
                 <compileSourcesArtifact>org.kie.workbench.services:kie-wb-common-services-api</compileSourcesArtifact>
                 <compileSourcesArtifact>org.kie.workbench:kie-wb-common-kogito-client</compileSourcesArtifact>
+                <compileSourcesArtifact>org.drools:drools-verifier-api</compileSourcesArtifact>
+                <compileSourcesArtifact>org.drools:drools-verifier-core</compileSourcesArtifact>
 
                 <!-- UF-ext -->
                 <compileSourcesArtifact>org.uberfire:uberfire-runtime-plugins-api</compileSourcesArtifact>
