DROOLS-5203 : Make DMN Validator use generic V&V module for conflicting, misleading, masked and overlapping rows

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-testing/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-testing/pom.xml
@@ -250,6 +250,22 @@
       <scope>provided</scope>
     </dependency>
 
+
+    <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>kie-dmn-validation</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.drools</groupId>
+          <artifactId>drools-verifier-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.drools</groupId>
+          <artifactId>drools-verifier-core</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
     <!-- Form modeler -->
     <!-- Needed by stunner -->
     <dependency>
