--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller/pom.xml
@@ -125,6 +125,7 @@
                 <plugin>
                   <groupId>org.kogito</groupId>
                   <artifactId>gwt-jsonix-schema-compiler</artifactId>
+                  <version>1.2.1-SNAPSHOT</version>
                 </plugin>
                 <plugin>
                   <groupId>org.jvnet.jaxb2_commons</groupId>
