--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.kie</groupId>
     <artifactId>kie-parent</artifactId>
     <version>7.40.0-SNAPSHOT</version>
+    <!-- useless comment -->	    
   </parent>
 
   <groupId>org.kie.workbench</groupId>
